feat: add files of lab3 version 1